# cpp

./: .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  run-clang-format.py
.github/workflows/: lint.yml  testing.yml
common/: CMakeLists.txt
common/container/: CMakeLists.txt  bvector.hpp  vector.cc  vector.hpp
common/declaration/: function.hpp
common/inheritance/: CMakeLists.txt  virtual.cc  virtual.hpp
common/reflection/: reflection.hpp
common/templates/: CMakeLists.txt  check_property.cc
common/test/: CMakeLists.txt  cast_test.cc  declaration_test.cc  inheritance_test.cc  reflection_test.cc  tuple_test.cc  vector_bool_test.cc  vector_test.cc
cppcon/20/Templates/: README.md
cppcon/21/The Hidden Secrets of Move Semantics/: README.md
standard/: CMakeLists.txt
standard/11/: CMakeLists.txt
standard/11/function/: CMakeLists.txt  function.hpp
standard/11/smart_pointer/: CMakeLists.txt  unique_pointer.hpp
standard/11/test/: CMakeLists.txt  function_test.cc  smart_pointer_test.cc  type_traits_test.cc
standard/11/type_traits/: type_traits.hpp
standard/17/: CMakeLists.txt
standard/17/test/: CMakeLists.txt  variant_test.cc
standard/17/variant/: CMakeLists.txt  variant.hpp
standard/20/: CMakeLists.txt
